# semantic-search-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
semantic_search_mcp/: __init__.py  __main__.py  cli.py  indexer.py  server.py
